==> Ralim/stm32-libraries/ILI9341.cpp <==
#include "GUI/ILI9341.h"

void ILI9341::writecommand(uint8_t c) {
	LCD_DC_LOW
	LCD_CS_LOW
	HAL_SPI_Transmit(spi_port, &c, 1, 100);
	LCD_CS_HIGH
}

void ILI9341::writedata(uint8_t c) {
	LCD_DC_HIGH
	LCD_CS_LOW
	HAL_SPI_Transmit(spi_port, &c, 1, 1000);
	LCD_CS_HIGH
}

void ILI9341::begin() {
	LCD_CS_LOW

	const uint8_t *addr = init_commands;
	while (1) {
		uint8_t count = *addr++;
		if (count-- == 0)
			break;
		writecommand_cont(*addr++);
		while (count-- > 0) {
			writedata8_cont(*addr++);
		}
	}
	LCD_CS_HIGH

	writecommand(ILI9341_SLPOUT);    //Exit Sleep

	HAL_Delay(120);

	writecommand(ILI9341_DISPON);    //Display on
	setRotation(3);    //Set display into landscape mode
}

void ILI9341::fillScreen(uint16_t color) {
	ILI9341::fillRect(0, 0, ILI9341_TFTWIDTH, ILI9341_TFTHEIGHT, color);
}

void ILI9341::fillRect(int16_t x, int16_t y, int16_t w, int16_t h, uint16_t color) {

	// rudimentary clipping (drawChar w/big text requires this)
	/*if ((x >= ILI9341_TFTWIDTH) || (y >= ILI9341_TFTHEIGHT))
	 return;
	 if ((x + w - 1) >= ILI9341_TFTWIDTH)
	 w = ILI9341_TFTWIDTH - x;
	 if ((y + h - 1) >= ILI9341_TFTHEIGHT)
	 h = ILI9341_TFTHEIGHT - y;
	 */
	ILI9341::setAddrWindow(x, y, x + w - 1, y + h - 1);
//We need to change SPI to 16 bit interface
	LCD_CS_LOW
	spiwrite16Rpt(color, ((uint32_t) w) * ((uint32_t) h));
	LCD_CS_HIGH
}

void ILI9341::setAddrWindow(uint16_t x0, uint16_t y0, uint16_t x1, uint16_t y1) {

	writecommand(ILI9341_CASET); // Column addr set
	spi_port->Init.DataSize = SPI_DATASIZE_16BIT;
	HAL_SPI_Init(spi_port);
	LCD_DC_HIGH
	LCD_CS_LOW
	HAL_SPI_Transmit(spi_port, (uint8_t*) &x0, 1, 100);
	HAL_SPI_Transmit(spi_port, (uint8_t*) &x1, 1, 100);
	LCD_CS_HIGH

	spi_port->Init.DataSize = SPI_DATASIZE_8BIT;
	HAL_SPI_Init(spi_port);

	writecommand(ILI9341_PASET); // Row addr set

	spi_port->Init.DataSize = SPI_DATASIZE_16BIT;
	HAL_SPI_Init(spi_port);
	LCD_DC_HIGH
	LCD_CS_LOW
	HAL_SPI_Transmit(spi_port, (uint8_t*) &y0, 1, 100);
	HAL_SPI_Transmit(spi_port, (uint8_t*) &y1, 1, 100);
	LCD_CS_HIGH
	spi_port->Init.DataSize = SPI_DATASIZE_8BIT;
	HAL_SPI_Init(spi_port);
	writecommand(ILI9341_RAMWR); // write to RAM follows
}

void ILI9341::drawPixel(int16_t x, int16_t y, uint16_t color) {

	if ((x < 0) || (x >= ILI9341_TFTWIDTH) || (y < 0) || (y >= ILI9341_TFTHEIGHT))
		return;

	ILI9341::setAddrWindow(x, y, x + 1, y + 1);
	LCD_DC_HIGH
	spi_port->Init.DataSize = SPI_DATASIZE_16BIT;
	HAL_SPI_Init(spi_port);

	LCD_CS_LOW
	HAL_SPI_Transmit(spi_port, (uint8_t *) &color, 1, 200);
	LCD_CS_HIGH
	spi_port->Init.DataSize = SPI_DATASIZE_8BIT;
	HAL_SPI_Init(spi_port);
}

void ILI9341::drawCircleHelper(int16_t x0, int16_t y0, int16_t r, uint8_t cornername, uint16_t color) {
	int16_t f = 1 - r;
	int16_t ddF_x = 1;
	int16_t ddF_y = -2 * r;
	int16_t x = 0;
	int16_t y = r;

	while (x < y) {
		if (f >= 0) {
			y--;
			ddF_y += 2;
			f += ddF_y;
		}
		x++;
		ddF_x += 2;
		f += ddF_x;
		if (cornername & 0x4) {
			drawPixel(x0 + x, y0 + y, color);
			drawPixel(x0 + y, y0 + x, color);
		}
		if (cornername & 0x2) {
			drawPixel(x0 + x, y0 - y, color);
			drawPixel(x0 + y, y0 - x, color);
		}
		if (cornername & 0x8) {
			drawPixel(x0 - y, y0 + x, color);
			drawPixel(x0 - x, y0 + y, color);
		}
		if (cornername & 0x1) {
			drawPixel(x0 - y, y0 - x, color);
			drawPixel(x0 - x, y0 - y, color);
		}
	}
}

void ILI9341::fillCircle(int16_t x0, int16_t y0, int16_t r, uint16_t color) {
	drawFastVLine(x0, y0 - r, 2 * r + 1, color); //draw line down center
	fillCircleHelper(x0, y0, r, 3, 0, color); //draw the chunks around the center
}

void ILI9341::fillCircleHelper(int16_t x0, int16_t y0, int16_t r, uint8_t cornername, int16_t delta, uint16_t color) {

	int16_t f = 1 - r;
	int16_t ddF_x = 1;
	int16_t ddF_y = -2 * r;
	int16_t x = 0;
	int16_t y = r;

	while (x < y) {
		if (f >= 0) {
			y--;
			ddF_y += 2;
			f += ddF_y;
		}
		++x;
		ddF_x += 2;
		f += ddF_x;

		if (cornername & 0x1) {
			drawFastVLine(x0 + x, y0 - y, 2 * y + 1 + delta, color);
			drawFastVLine(x0 + y, y0 - x, 2 * x + 1 + delta, color);
		}
		if (cornername & 0x2) {
			drawFastVLine(x0 - x, y0 - y, 2 * y + 1 + delta, color);
			drawFastVLine(x0 - y, y0 - x, 2 * x + 1 + delta, color);
		}
	}
}

void ILI9341::drawRoundRect(int16_t x, int16_t y, int16_t w, int16_t h, int16_t r, uint16_t color) {
	// smarter version
	drawFastHLine(x + r, y, w - 2 * r, color); // Top
	drawFastHLine(x + r, y + h - 1, w - 2 * r, color); // Bottom
	drawFastVLine(x, y + r, h - 2 * r, color); // Left
	drawFastVLine(x + w - 1, y + r, h - 2 * r, color); // Right
	// draw four corners
	drawCircleHelper(x + r, y + r, r, 1, color);
	drawCircleHelper(x + w - r - 1, y + r, r, 2, color);
	drawCircleHelper(x + w - r - 1, y + h - r - 1, r, 4, color);
	drawCircleHelper(x + r, y + h - r - 1, r, 8, color);
}

void ILI9341::fillRoundRect(int16_t x, int16_t y, int16_t w, int16_t h, int16_t r, uint16_t color) {
	// smarter version
	fillRect(x + r, y, w - 2 * r, h, color);

	// draw four corners
	fillCircleHelper(x + w - r - 1, y + r, r, 1, h - 2 * r - 1, color);
	fillCircleHelper(x + r, y + r, r, 2, h - 2 * r - 1, color);
}

void ILI9341::drawChar(int16_t x, int16_t y, unsigned char c, uint16_t fgcolor, uint16_t bgcolor, uint8_t size) {

	//This works by unrolling the drawRect code into here
	setAddrWindow(x, y, x + 6 * size - 1, y + 8 * size - 1);
	spi_port->Init.DataSize = SPI_DATASIZE_16BIT;
	HAL_SPI_Init(spi_port);
	uint8_t mask = 0x01;
	uint16_t color;
	uint8_t yr;
	LCD_DC_HIGH
	LCD_CS_LOW

	for (y = 0; y < 8; y++) {
		for (yr = 0; yr < size; yr++) {
			for (x = 0; x < 5; x++) {
				if (font[c * 5 + x] & mask) {
					color = fgcolor;
				} else {
					color = bgcolor;
				}
				//push pixels fast (this function has less overhead)
				spiwrite16Rpt(color, size);
			}
			spiwrite16Rpt(bgcolor, size);
		}
		mask = mask << 1;
	}

	LCD_CS_HIGH
}
